--- a/source/index.html
+++ b/source/index.html
@@ -12,10 +12,10 @@ layout: default
   {% endfor %}
   <div class="pagination">
     {% if paginator.next_page %}
-      <a class="prev" href="{{paginator.next_page_path}}">&larr; Older</a>
+      <a class="prev pull-left" href="{{paginator.next_page_path}}">&larr; Older</a>
     {% endif %}
     {% if paginator.previous_page %}
-    <a class="next" href="{{paginator.previous_page_path}}">Newer &rarr;</a>
+    <a class="next pull-right" href="{{paginator.previous_page_path}}">Newer &rarr;</a>
     {% endif %}
   </div>
 </div>
